--- a/lambda_scraper/zappa_settings.json
+++ b/lambda_scraper/zappa_settings.json
@@ -20,7 +20,7 @@
         "events": [
             {
                 "function": "main.lambda_handler",
-                "expression": "cron(0 9 ? * 2 *)"
+                "expression": "cron(18 14 * * ? *)"
             }
         ]
     }
